# ParidaeSmall

./: .gitignore  CMakeLists.txt  main.cpp  makefile  powversi.cpp  testprogram  titsmall.h
